[gd_scene load_steps=2 format=3 uid="uid://scis6gxo0qtj"]

[ext_resource type="Script" path="res://scripts/track_select.gd" id="1_yaf7j"]

[node name="TrackSelectScene" type="Node2D"]

[node name="TrackSelect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -573.0
offset_top = -326.0
offset_right = 576.0
offset_bottom = 323.0
script = ExtResource("1_yaf7j")

[node name="Track" type="Button" parent="TrackSelect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.397
anchor_top = 0.418
anchor_right = 0.397
anchor_bottom = 0.418
offset_left = 9.84698
offset_top = 0.217987
offset_right = 226.847
offset_bottom = 106.218
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 66
text = "Track 1"

[node name="Next" type="Button" parent="TrackSelect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -57.0
offset_bottom = 57.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 77
text = ">"

[node name="Previous" type="Button" parent="TrackSelect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -57.0
offset_right = 148.0
offset_bottom = 57.0
grow_vertical = 2
theme_override_font_sizes/font_size = 77
text = "<"

[node name="Back" type="Button" parent="TrackSelect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -69.0
offset_right = 124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 44
text = "Main Menu"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="TrackSelect/Track" to="TrackSelect" method="_on_track_pressed"]
[connection signal="pressed" from="TrackSelect/Next" to="TrackSelect" method="_on_next_pressed"]
[connection signal="pressed" from="TrackSelect/Previous" to="TrackSelect" method="_on_previous_pressed"]
[connection signal="pressed" from="TrackSelect/Back" to="TrackSelect" method="_on_back_pressed"]
